--- a/trunk/shamrock-web/webapp/admin/mainSchools.xhtml
+++ b/trunk/shamrock-web/webapp/admin/mainSchools.xhtml
@@ -11,11 +11,11 @@
   <ui:define name="content">
 
 
-    <!-- Next form contains the master list where each row contains 2 links to trigger
-         update and remove.  Out side of the list, has a add link to add new school
-         all links are ajaxed to render the school detail
+    <!-- Next form contains the master list where each row has 2 links to trigger
+         update and remove.  Out side of the list, has an add link to add new school.
+         All links are ajaxed to render the school detail
          
-         The school detail form is a full submit to trigger a full page reload
+         Submitting the school detail form triggers a full page reload ( ie no ajax )
      -->
     
     <tr:form id="listWrapper" >
