save implicit user role

--- a/shamrock-web/webapp/admin/schoolAdmins.xhtml
+++ b/shamrock-web/webapp/admin/schoolAdmins.xhtml
@@ -11,7 +11,7 @@
 
     <h:form>
 
-      <rich:dataTable value="#{userManager.users}" var="admin" width="900px" columnClasses="center" rows="25">
+      <rich:dataTable value="#{userManager.schoolAdmins}" var="admin" width="900px" columnClasses="center" rows="25">
 
         <f:facet name="header">
           <h:outputText value="School System Administrators" />
