--- a/trunk/shamrock-web/webapp/admin/mainSchools.xhtml
+++ b/trunk/shamrock-web/webapp/admin/mainSchools.xhtml
@@ -20,7 +20,7 @@
 
     <tr:form id="listWrapper">
 
-      <tr:panelCaptionGroup captionText="#{base['school.main']}">
+      <tr:panelCaptionGroup >
 
         <tr:table id="list" value="#{mainSchoolList.mainSchools}" var="school" width="900px" rows="25"
           rowBandingInterval="1">
