--- a/shamrock-web/webapp/admin/richMainSchools.xhtml
+++ b/shamrock-web/webapp/admin/richMainSchools.xhtml
@@ -12,7 +12,7 @@
 
     <h:form id="list">
 
-      <rich:dataTable value="#{mainSchoolList.mainSchools}" var="school" width="900px" rows="25">
+      <rich:dataTable value="#{mainSchoolList.mainSchools}" var="school" width="680" rows="25">
 
         <f:facet name="header">
           <h:outputText value="Main Schools" />
@@ -67,26 +67,39 @@
     <rich:spacer width="1" height="20" />
 
     <a4j:outputPanel layout="none" ajaxRendered="true">
-      <rich:panel style="width:900px;" id="schoolDetail" rendered="#{schoolDetail.rendered}">
+      <rich:panel id="schoolDetail" style="width:680;" rendered="#{schoolDetail.rendered}">
         <f:facet name="header">
-            <h:outputText value="School Details"></h:outputText>
+          <h:outputText value="School Details"></h:outputText>
         </f:facet>
-      
-        <h:form >
-          <h:panelGrid columns="2" labelWidth="20%" fieldWidth="67%">
-            <h:inputHidden id="selectedSchoolId" value="#{schoolDetail.id}" />
-            <h:inputHidden id="selectedSchoolAction" value="#{schoolDetail.action}" />
-            <h:outputText value="#{base['school.name']}"/>
-            <h:inputText columns="30" label="Name" value="#{schoolDetail.school.name}"
-              readonly="#{schoolDetail.readOnly}" disable="#{schoolDetail.readOnly}" />
-              
-            <h:outputText value="#{base['school.description']}"/>
-            <h:inputText columns="60" label="Description" value="#{schoolDetail.school.description}"
-              readonly="#{schoolDetail.readOnly}" disable="#{schoolDetail.readOnly}" />
-            <rich:spacer width="1" height="10" />
-            <a4j:commandLink reRender="list" value="#{schoolDetail.action}"
-              actionListener="#{schoolDetail.persistSchoolListener}" immediate="#{schoolDetail.readOnly}" />
-          </h:panelGrid>
+        <h:form>
+          <rich:tabPanel switchType="client" height="200" >
+            <rich:tab label="Main" >
+              <h:panelGrid columns="2" labelWidth="20%" fieldWidth="67%">
+                <h:inputHidden id="selectedSchoolId" value="#{schoolDetail.id}" />
+                <h:inputHidden id="selectedSchoolAction" value="#{schoolDetail.action}" />
+                <h:outputText value="#{base['school.name']}" />
+                <h:inputText required="true" size="30" label="Name" value="#{schoolDetail.school.name}"
+                  readonly="#{schoolDetail.readOnly}" disabled="#{schoolDetail.readOnly}" />
+
+                <h:outputText value="#{base['school.description']}" />
+                <h:inputText size="60" label="Description" value="#{schoolDetail.school.description}"
+                  readonly="#{schoolDetail.readOnly}" disabled="#{schoolDetail.readOnly}" />
+              </h:panelGrid>
+            </rich:tab>
+            <rich:tab label="Address" disabled="#{schoolDetail.readOnly}" >
+            </rich:tab>
+            <rich:tab label="Administrators" disabled="#{schoolDetail.readOnly}" >
+              <rich:listShuttle sourceValue="#{userManager.schoolAdmins}"  var="items"
+                listHeight="300" listWidth="200" sourceCaptionLabel="Available Items"
+                targetCaptionLabel="Currently Active Items" >
+                <rich:column>
+                  <h:outputText value="#{items.name}"></h:outputText>
+                </rich:column>
+              </rich:listShuttle>
+            </rich:tab>
+          </rich:tabPanel>
+          <rich:spacer width="1" height="10" />
+          <a4j:commandLink value="#{schoolDetail.action}" immediate="#{schoolDetail.readOnly}" action="#{schoolDetail.persistSchool}" />
         </h:form>
       </rich:panel>
     </a4j:outputPanel>
